Add new localization keys for "Connect" and "Disconnect" actions in en-US language file.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -1,3 +1,5 @@
 {
-  "enable-flag": "Open about://flags and enable #experimental-web-platform-features to use Web Bluetooth."
+  "enable-flag": "Open about://flags and enable #experimental-web-platform-features to use Web Bluetooth.",
+  "connect": "Connect",
+  "disconnect": "Disconnect"
 }
