Add shutdown confirmation with localization and improve Bluetooth device handling in `Wizard` class
- Added new localization keys for shutdown confirmation dialog.
- Integrated `notiflix` for confirmation dialog when initiating shutdown.
- Updated Bluetooth device scanning to accept all devices.
- Enhanced `setConnectedDevice` to handle cases where `gatt` is unavailable.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -1,5 +1,10 @@
 {
   "enable-flag": "Open about://flags and enable #experimental-web-platform-features to use Web Bluetooth.",
   "connect": "Connect",
-  "disconnect": "Disconnect"
+  "disconnect": "Disconnect",
+  "shutdown": "Shutdown",
+  "yes": "Yes",
+  "no": "No",
+  "shutdown-title": "Shutdown",
+  "shutdown-message": "Are you sure you want to shutdown the device?"
 }
