Update button styles and add charge control confirmation
- Changed button styles for "Shutdown" and "Charge Control" for better distinction.
- Added localization keys and confirmation dialog for "Charge Control" action.
- Improved logging consistency and introduced `decodeJSON` utility for GATT data handling.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -6,5 +6,7 @@
   "yes": "Yes",
   "no": "No",
   "shutdown-title": "Shutdown",
-  "shutdown-message": "Are you sure you want to shutdown the device?"
+  "shutdown-message": "Are you sure you want to shutdown the device?",
+  "charge-title": "Charge Control",
+  "charge-message": "Are you sure you want to stop charging the device?"
 }
