Add connection status notifications and improve device state handling
- Added localization keys for "connected" and "disconnected" messages.
- Integrated success and warning notifications for connection and disconnection events.
- Improved `setConnectedDevice` to handle connection state updates within a promise.
- Fixed `disconnect` method to clear device instance and update state.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -1,6 +1,8 @@
 {
   "enable-flag": "Open about://flags and enable #experimental-web-platform-features to use Web Bluetooth.",
   "connect": "Connect",
+  "connected": "Successfully connected to device...",
+  "disconnected": "Disconnected from device.",
   "disconnect": "Disconnect",
   "shutdown": "Shutdown",
   "yes": "Yes",
