Add reboot functionality and localization keys
- Added `reboot` method for initiating device reboot via API.
- Registered `rebootButton` with click event handler in `Wizard.ts`.
- Updated localization file with `reboot-title` and `reboot-message` keys.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -12,5 +12,7 @@
   "charge-title": "Charge Control",
   "charge-message": "Are you sure you want to stop charging the device?",
   "command-success": "Command successful",
-  "command-failed": "Command failed"
+  "command-failed": "Command failed",
+  "reboot-title": "Reboot",
+  "reboot-message": "Are you sure you want to reboot the device?"
 }
