Add loader functionality and improve device query workflows
- Introduced loader management with `setLoader` for user feedback during operations.
- Added new methods `queryDeviceInfo` and `queryFirmwareInfo` to handle device details fetching.
- Enhanced UI updates with localized text for device info and new "info" localization key.
- Refactored `apiResolvers` to support multi-parameter resolution.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -14,5 +14,6 @@
   "command-success": "Command successful",
   "command-failed": "Command failed",
   "reboot-title": "Reboot",
-  "reboot-message": "Are you sure you want to reboot the device?"
+  "reboot-message": "Are you sure you want to reboot the device?",
+  "info": "Welcome to this Tool, you need to connect to the device via bluetooth first."
 }
