--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -15,5 +15,9 @@
   "command-failed": "Command failed",
   "reboot-title": "Reboot",
   "reboot-message": "Are you sure you want to reboot the device?",
-  "info": "Welcome to this Tool, you need to connect to the device via bluetooth first."
+  "info": "Welcome to this Tool, you need to connect to the device via bluetooth first.",
+  "affiliate": "This site is not affiliated with Ubiquiti in any way.",
+  "name": "Name",
+  "serial": "Serial",
+  "firmware": "Firmware"
 }
