Add SFP module support and extend wizard functionality
- Added new UI elements for SFP module info (part, rev, vendor, serial, type, compliance).
- Introduced "Save SFP" button and functionality in `Wizard.ts`.
- Implemented SFP module data reading and saving processes with API integration.
- Enhanced localization with keys for SFP module operations (`module-message`, `module-read`, `module-saved`).
- Refactored control structure in `index.html` using Bootstrap's button groups.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -19,5 +19,8 @@
   "affiliate": "This site is not affiliated with Ubiquiti in any way.",
   "name": "Name",
   "serial": "Serial",
-  "firmware": "Firmware"
+  "firmware": "Firmware",
+  "module-message": "Fibre Module successfully read.",
+  "module-read": "Module EEPROM was read successfully, saving Data now.",
+  "module-saved": "Module EEPROM was saved successfully from Wizard."
 }
