Add meta tags, improve UI structure, and enhance BLE error handling
- Added meta tags for SEO and device compatibility in `index.html`.
- Updated SFP module UI with Bootstrap card redesign for better layout and styling.
- Introduced `wrongBrowserBLESupport` method in `Wizard.ts` to notify users of browser BLE support issues.
- Improved debug messages and refactored methods for better code maintainability.
- Added dashboard image to README for visual representation.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -1,5 +1,6 @@
 {
   "enable-flag": "Open about://flags and enable #experimental-web-platform-features to use Web Bluetooth.",
+  "browser-ble-support": "Your browser does not support Web Bluetooth API. Please use a browser that supports it.",
   "connect": "Connect",
   "connected": "Successfully connected to device...",
   "disconnected": "Disconnected from device.",
