Retrieve MAC address during initialization and enhance localization
- Updated `Wizard.ts` to retrieve and store the device's MAC address using `chargeCtrl` command.
- Added fallback notification for MAC retrieval failure.
- Extended localization (`en-US.json`) with `mac-failed` key.
- Updated BLE service discovery to include an additional optional service.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -23,5 +23,6 @@
   "firmware": "Firmware",
   "module-message": "Fibre Module successfully read.",
   "module-read": "Module EEPROM was read successfully, saving Data now.",
-  "module-saved": "Module EEPROM was saved successfully from Wizard."
+  "module-saved": "Module EEPROM was saved successfully from Wizard.",
+  "mac-failed": "Unable to retrieve MAC Address, please try again."
 }
