Add new localization keys and refactor locale update logic in `Wizard.ts`
- Added additional UI labels (`charge`, `reboot`, `save`, `read`, `write`) in `en-US.json` and `de-DE.json`.
- Refactored `Wizard.ts` to introduce `replaceLocale` method for setting localized texts and clearing fields. Removed redundant locale update logic from `registerListeners`.

--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -6,6 +6,7 @@
   "disconnected": "Vom Gerät getrennt.",
   "disconnect": "Trennen",
   "shutdown": "Herunterfahren",
+  "charge": "Ladesteuerung",
   "yes": "Ja",
   "no": "Nein",
   "shutdown-title": "Herunterfahren",
@@ -14,6 +15,7 @@
   "charge-message": "Sind Sie sicher, dass Sie das Laden des Geräts stoppen möchten?",
   "command-success": "Befehl erfolgreich ausgeführt",
   "command-failed": "Befehl fehlgeschlagen",
+  "reboot": "Neustart",
   "reboot-title": "Neustart",
   "reboot-message": "Sind Sie sicher, dass Sie das Gerät neu starten möchten?",
   "info": "Willkommen zu diesem Tool. Sie müssen sich zuerst per Bluetooth mit dem Gerät verbinden.",
@@ -21,6 +23,9 @@
   "name": "Name",
   "serial": "Seriennummer",
   "firmware": "Firmware",
+  "save": "Speichern",
+  "read": "Lesen",
+  "write": "Schreiben",
   "module-message": "Fasermodul erfolgreich ausgelesen.",
   "module-read": "Modul-EEPROM wurde erfolgreich ausgelesen. Daten werden jetzt gespeichert.",
   "module-saved": "Modul-EEPROM wurde erfolgreich im Assistenten gespeichert.",
