--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -6,6 +6,7 @@
   "disconnected": "Disconnected from device.",
   "disconnect": "Disconnect",
   "shutdown": "Shutdown",
+  "charge": "Charge Control",
   "yes": "Yes",
   "no": "No",
   "shutdown-title": "Shutdown",
@@ -14,6 +15,7 @@
   "charge-message": "Are you sure you want to stop charging the device?",
   "command-success": "Command successful",
   "command-failed": "Command failed",
+  "reboot": "Reboot",
   "reboot-title": "Reboot",
   "reboot-message": "Are you sure you want to reboot the device?",
   "info": "Welcome to this Tool, you need to connect to the device via bluetooth first.",
@@ -21,6 +23,9 @@
   "name": "Name",
   "serial": "Serial",
   "firmware": "Firmware",
+  "save": "Save",
+  "read": "Read",
+  "write": "Write",
   "module-message": "Fibre Module successfully read.",
   "module-read": "Module EEPROM was read successfully, saving Data now.",
   "module-saved": "Module EEPROM was saved successfully from Wizard.",
