Add legacy and new API localization keys and enhance log entries in `Wizard.ts`
- Added `api-new` and `api-legacy` keys in `en-US.json` and `de-DE.json`.
- Updated `setLog` in `Wizard.ts` to include API type (legacy or new) as a tooltip for log entries.
- Adjusted border width in `style.css` for consistent styling.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -30,5 +30,7 @@
   "module-read": "Module EEPROM was read successfully, saving Data now.",
   "module-saved": "Module EEPROM was saved successfully from Wizard.",
   "module-error": "Unable to read Module, please unplug and plug it back in.",
-  "mac-failed": "Unable to retrieve MAC Address, please try again."
+  "mac-failed": "Unable to retrieve MAC Address, please try again.",
+  "api-new": "New API",
+  "api-legacy": "Legacy API"
 }
