--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -30,5 +30,7 @@
   "module-read": "Modul-EEPROM wurde erfolgreich ausgelesen. Daten werden jetzt gespeichert.",
   "module-saved": "Modul-EEPROM wurde erfolgreich im Assistenten gespeichert.",
   "module-error": "Modul konnte nicht gelesen werden. Bitte ziehen Sie es ab und stecken Sie es erneut ein.",
-  "mac-failed": "MAC-Adresse konnte nicht abgerufen werden. Bitte versuchen Sie es erneut."
+  "mac-failed": "MAC-Adresse konnte nicht abgerufen werden. Bitte versuchen Sie es erneut.",
+  "api-new": "Neue API",
+  "api-legacy": "Alte API"
 }
