Add autoscroll functionality and localization for Wizard Log
- Added an autoscroll toggle switch to `index.html` for the Wizard Log section.
- Implemented `scrollLogToBottom` and `hasAutoscroll` methods in `Wizard.ts` to control autoscroll behavior.
- Updated `setLog` method to automatically scroll if autoscroll is enabled.
- Added `autoscroll` localization key in `en-US.json` and `de-DE.json`.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -32,5 +32,6 @@
   "module-error": "Unable to read Module, please unplug and plug it back in.",
   "mac-failed": "Unable to retrieve MAC Address, please try again.",
   "api-new": "New API",
-  "api-legacy": "Legacy API"
+  "api-legacy": "Legacy API",
+  "autoscroll": "Autoscroll the Log"
 }
