--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -32,5 +32,6 @@
   "module-error": "Modul konnte nicht gelesen werden. Bitte ziehen Sie es ab und stecken Sie es erneut ein.",
   "mac-failed": "MAC-Adresse konnte nicht abgerufen werden. Bitte versuchen Sie es erneut.",
   "api-new": "Neue API",
-  "api-legacy": "Alte API"
+  "api-legacy": "Alte API",
+  "autoscroll": "Automatisch dem Log scrollen"
 }
