Add reboot localization keys and success/error notifications for Wizard Reboot button
- Added `reboot-success` and `reboot-failed` keys in `en-US.json` and `de-DE.json`.
- Updated `Wizard.ts` to notify success or failure based on API response during reboot.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -33,5 +33,7 @@
   "mac-failed": "Unable to retrieve MAC Address, please try again.",
   "api-new": "New API",
   "api-legacy": "Legacy API",
-  "autoscroll": "Autoscroll the Log"
+  "autoscroll": "Autoscroll the Log",
+  "reboot-success": "Device will be rebooted in a few seconds...",
+  "reboot-failed": "Device reboot failed."
 }
