--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -33,7 +33,7 @@
   "mac-failed": "MAC-Adresse konnte nicht abgerufen werden. Bitte versuchen Sie es erneut.",
   "api-new": "Neue API",
   "api-legacy": "Alte API",
-  "autoscroll": "Automatisch dem Log scrollen",
+  "autoscroll": "Automatisch mit dem Log scrollen",
   "reboot-success": "Gerät wird in wenigen Sekunden neugestartet...",
   "reboot-failed": "Gerät konnte nicht neugestartet werden."
 }
