Add EEPROM file validation with error notifications and extended localization support
- Validate EEPROM file size (512 or 640 bytes) in `writeXSFP` method.
- Add new error message strings for invalid file format in localization files (`en-US.json`, `de-DE.json`).
- Improve error handling in `writeXSFP` with detailed user notifications.
- Introduce new `readFile` method for processing file input.
- Increase default timeout in `sendApiRequestRaw` to 6000ms.

--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -46,6 +46,7 @@
   "battery": "Batterie",
   "no-eeprom-selected": "Es wurde kein EEPROM Dump zum flashen ausgewählt.",
   "eeprom-dump-send": "EEPROM Dump wurde erfolgreich auf das Gerät übertragen, bitte auf \"Write\" drücken um das Modul zu flashen.",
-  "eeprom-sync-error": "Beim Synchronisieren des EEPROM Dumps ist ein Fehler aufgetreten."
+  "eeprom-sync-error": "Beim Synchronisieren des EEPROM Dumps ist ein Fehler aufgetreten.",
+  "eeprom-file-error": "Falsches EEPROM Dump File, die Datei muss 512 (SFP) oder 640 (QSFP) Bytes lang sein."
 
 }
