Add new error message for missing module during EEPROM sync and improve error handling
- Update localization files (`en-US.json`, `de-DE.json`) with a new error string for missing fibre modules.
- Refine error handling in `writeXSFP` method to notify users when no module is connected.
- Minor adjustments for readability in file validation logic.

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -47,5 +47,6 @@
   "no-eeprom-selected": "No EEPROM Dump to flash was selected.",
   "eeprom-dump-send": "EEPROM Dump was successfully sent to device, please click on \"Write\" to flash it.",
   "eeprom-sync-error": "While synchronizing the EEPROM Dump an error has occurred.",
-  "eeprom-file-error": "Incorrect EEPROM Dump file format, File should be 512 (SFP) or 640 (QSFP) Bytes long. "
+  "eeprom-file-error": "Incorrect EEPROM Dump file format, File should be 512 (SFP) or 640 (QSFP) Bytes long. ",
+  "eeprom-sync-nomodule": "To transmit an EEPROM Dump, an fibre module must be connected to the device."
 }
