--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -48,6 +48,7 @@
   "eeprom-dump-send": "EEPROM Dump wurde erfolgreich auf das Gerät übertragen, bitte auf \"Write\" drücken um das Modul zu flashen.",
   "eeprom-sync-error": "Beim Synchronisieren des EEPROM Dumps ist ein Fehler aufgetreten.",
   "eeprom-file-error": "Falsches EEPROM Dump File, die Datei muss 512 (SFP) oder 640 (QSFP) Bytes lang sein.",
-  "eeprom-sync-nomodule": "Um ein EEPROM Dump zu übertragen, muss ein Fasermodul eingesteckt werden."
-
+  "eeprom-sync-nomodule": "Um ein EEPROM Dump zu übertragen, muss ein Fasermodul eingesteckt werden.",
+  "sif-error-start": "Das Serial Interface konnte nicht angefordert werden. Bitte versuchen Sie es erneut.",
+  "sif-error": "Das Serial Interface konnte nicht gelesen werden."
 }
