--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -48,5 +48,7 @@
   "eeprom-dump-send": "EEPROM Dump was successfully sent to device, please click on \"Write\" to flash it.",
   "eeprom-sync-error": "While synchronizing the EEPROM Dump an error has occurred.",
   "eeprom-file-error": "Incorrect EEPROM Dump file format, File should be 512 (SFP) or 640 (QSFP) Bytes long. ",
-  "eeprom-sync-nomodule": "To transmit an EEPROM Dump, an fibre module must be connected to the device."
+  "eeprom-sync-nomodule": "To transmit an EEPROM Dump, an fibre module must be connected to the device.",
+  "sif-error-start": "Unable to request the serial interface, please try again.",
+  "sif-error": "Unable to read the serial interface."
 }
