Add new log creation notification and improve chunk streaming logic
- Update localization files (`en-US.json`, `de-DE.json`) with a new notification string for log download initiation.
- Notify users when log files are created and download starts.
- Refine chunk streaming logic in `Wizard.ts` for better readability and offset handling.
- Improve debug messages to reflect accurate data retrieval progress.

--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -50,5 +50,6 @@
   "eeprom-file-error": "Falsches EEPROM Dump File, die Datei muss 512 (SFP) oder 640 (QSFP) Bytes lang sein.",
   "eeprom-sync-nomodule": "Um ein EEPROM Dump zu übertragen, muss ein Fasermodul eingesteckt werden.",
   "sif-error-start": "Das Serial Interface konnte nicht angefordert werden. Bitte versuchen Sie es erneut.",
-  "sif-error": "Das Serial Interface konnte nicht gelesen werden."
+  "sif-error": "Das Serial Interface konnte nicht gelesen werden.",
+  "sif-start": "Logdatei wurde erstellt und wird nun vom Wizard runtergeladen."
 }
