Add "device-select" locale key and implement Liquid Glass theme
- Extend `en-US.json` and `de-DE.json` with the new "device-select" translation key.
- Introduce a Liquid Glass theme with UniFi-inspired styling in `style.css`.

--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -52,5 +52,6 @@
   "sif-error-start": "Das Serial Interface konnte nicht angefordert werden. Bitte versuchen Sie es erneut.",
   "sif-error": "Das Serial Interface konnte nicht gelesen werden.",
   "sif-start": "Logdatei wurde erstellt und wird nun vom Wizard runtergeladen.",
-  "sif-finish": "Logdatei wurde erfolgreich heruntergeladen."
+  "sif-finish": "Logdatei wurde erfolgreich heruntergeladen.",
+  "device-select": "Gerät auswählen"
 }
