--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -52,5 +52,6 @@
   "sif-error-start": "Unable to request the serial interface, please try again.",
   "sif-error": "Unable to read the serial interface.",
   "sif-start": "Log file was created and will be downloaded now from the Wizard.",
-  "sif-finish": "Log file was successfully downloaded."
+  "sif-finish": "Log file was successfully downloaded.",
+  "device-select": "Select device"
 }
