Localize "module-meta-description" and enhance button styling
- Add "module-meta-description" key to `en-US.json` and `de-DE.json` for localized support.
- Update `Wizard.ts` to utilize the new localization key for metadata description.
- Adjust `.btn-warning` styles in `style.css` to include a custom button text color.
- Replace static button text and improve `device-selector` definition by adding a disabled placeholder option.

--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -53,5 +53,6 @@
   "sif-error": "Das Serial Interface konnte nicht gelesen werden.",
   "sif-start": "Logdatei wurde erstellt und wird nun vom Wizard runtergeladen.",
   "sif-finish": "Logdatei wurde erfolgreich heruntergeladen.",
-  "device-select": "Gerät auswählen"
+  "device-select": "Gerät auswählen",
+  "module-meta-description": "Auf <b>Lesen</b> drücken um die Metadaten des Moduls auszulesen."
 }
